Create a game uuid

--- a/Switchboard/package.json
+++ b/Switchboard/package.json
@@ -13,6 +13,7 @@
     "express-hal": "0.0.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "node-uuid": "^1.4.3",
     "serve-favicon": "~2.3.0"
   }
 }
